--- a/home.html
+++ b/home.html
@@ -93,5 +93,10 @@
         <div class="app-icon"><img src="icons/find_friends.png" alt="Find Friends"></div>
         <div class="app-icon"><img src="icons/fitness.png" alt="Fitness"></div>
     </div>
+    <script>
+        setTimeout(function() {
+            window.location.href = "index.html";
+        }, 5000); // Redirect after 5 seconds
+    </script>
 </body>
 </html>
