--- a/home.html
+++ b/home.html
@@ -56,42 +56,42 @@
         updateTime();
     </script>
     <div class="app-grid">
-        <div class="app-icon"><img src="icons/phone.png" alt="Phone"></div>
-        <div class="app-icon"><img src="icons/messages.png" alt="Messages"></div>
-        <div class="app-icon"><img src="icons/mail.png" alt="Mail"></div>
         <div class="app-icon"><img src="icons/safari.png" alt="Safari"></div>
-        <div class="app-icon"><img src="icons/music.png" alt="Music"></div>
-        <div class="app-icon"><img src="icons/maps.png" alt="Maps"></div>
-        <div class="app-icon"><img src="icons/weather.png" alt="Weather"></div>
+        <div class="app-icon"><img src="icons/mail.png" alt="Mail"></div>
         <div class="app-icon"><img src="icons/photos.png" alt="Photos"></div>
         <div class="app-icon"><img src="icons/camera.png" alt="Camera"></div>
+        <div class="app-icon"><img src="icons/weather.png" alt="Weather"></div>
+        <div class="app-icon"><img src="icons/maps.png" alt="Maps"></div>
         <div class="app-icon"><img src="icons/clock.png" alt="Clock"></div>
         <div class="app-icon"><img src="icons/calculator.png" alt="Calculator"></div>
-        <div class="app-icon"><img src="icons/settings.png" alt="Settings"></div>
         <div class="app-icon"><img src="icons/notes.png" alt="Notes"></div>
-        <div class="app-icon"><img src="icons/reminders.png" alt="Reminders"></div>
-        <div class="app-icon"><img src="icons/stocks.png" alt="Stocks"></div>
-        <div class="app-icon"><img src="icons/news.png" alt="News"></div>
-        <div class="app-icon"><img src="icons/itunes_store.png" alt="iTunes Store"></div>
-        <div class="app-icon"><img src="icons/app_store.png" alt="App Store"></div>
-        <div class="app-icon"><img src="icons/books.png" alt="Books"></div>
-        <div class="app-icon"><img src="icons/health.png" alt="Health"></div>
-        <div class="app-icon"><img src="icons/wallet.png" alt="Wallet"></div>
-        <div class="app-icon"><img src="icons/files.png" alt="Files"></div>
-        <div class="app-icon"><img src="icons/find_my.png" alt="Find My"></div>
-        <div class="app-icon"><img src="icons/shortcuts.png" alt="Shortcuts"></div>
-        <div class="app-icon"><img src="icons/contacts.png" alt="Contacts"></div>
-        <div class="app-icon"><img src="icons/watch.png" alt="Watch"></div>
-        <div class="app-icon"><img src="icons/tv.png" alt="TV"></div>
-        <div class="app-icon"><img src="icons/home.png" alt="Home"></div>
-        <div class="app-icon"><img src="icons/translate.png" alt="Translate"></div>
-        <div class="app-icon"><img src="icons/tips.png" alt="Tips"></div>
-        <div class="app-icon"><img src="icons/voice_memos.png" alt="Voice Memos"></div>
-        <div class="app-icon"><img src="icons/compass.png" alt="Compass"></div>
-        <div class="app-icon"><img src="icons/measure.png" alt="Measure"></div>
-        <div class="app-icon"><img src="icons/podcasts.png" alt="Podcasts"></div>
-        <div class="app-icon"><img src="icons/find_friends.png" alt="Find Friends"></div>
-        <div class="app-icon"><img src="icons/fitness.png" alt="Fitness"></div>
+        <div class="app-icon"><img src="icons/settings.png" alt="Settings"></div>
+        <div class="app-icon"><img src="icons/phone.png" alt="Phone"></div>
+        <div class="app-icon"><img src="icons/messages.png" alt="Messages"></div>
+        <div class="app-icon">App 13</div>
+        <div class="app-icon">App 14</div>
+        <div class="app-icon">App 15</div>
+        <div class="app-icon">App 16</div>
+        <div class="app-icon">App 17</div>
+        <div class="app-icon">App 18</div>
+        <div class="app-icon">App 19</div>
+        <div class="app-icon">App 20</div>
+        <div class="app-icon">App 21</div>
+        <div class="app-icon">App 22</div>
+        <div class="app-icon">App 23</div>
+        <div class="app-icon">App 24</div>
+        <div class="app-icon">App 25</div>
+        <div class="app-icon">App 26</div>
+        <div class="app-icon">App 27</div>
+        <div class="app-icon">App 28</div>
+        <div class="app-icon">App 29</div>
+        <div class="app-icon">App 30</div>
+        <div class="app-icon">App 31</div>
+        <div class="app-icon">App 32</div>
+        <div class="app-icon">App 33</div>
+        <div class="app-icon">App 34</div>
+        <div class="app-icon">App 35</div>
+        <div class="app-icon">App 36</div>
     </div>
     <script>
         setTimeout(function() {
