--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div>
     <script>
         setTimeout(function() {
-            window.location.href = "index.html";
-        }, 5000); // Redirect after 5 seconds
+            window.location.href = "/index.html";
+        }, 1000); // Redirect after 5 seconds
     </script>
 </body>
 </html>
