--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <script>
         setTimeout(function() {
-            window.location.href = "home.html";
+            window.location.href = "index.html";
         }, 5000); // Redirect after 5 seconds
     </script>
 </body>
