--- a/index.html
+++ b/index.html
@@ -11,64 +11,36 @@
             overflow: hidden;
             background: #000;
         }
-        .apple-logo {
+        .center-container {
             position: absolute;
-            width: 80px;
-            height: 80px;
-            pointer-events: none;
-            opacity: 0.8;
-            transition: filter 0.3s;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-        .apple-logo:hover {
-            filter: drop-shadow(0 0 10px #fff);
+        .apple-logo {
+            width: 160px;
+            height: 160px;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+            filter: drop-shadow(0 0 40px #fff8);
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
     </style>
 </head>
 <body>
-    <!-- Apple Screensaver Animation -->
-    <script>
-        // SVG Apple logo as a string
-        const appleSVG = `<svg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'><path fill='white' d='M81.7,53.6c-0.2-0.2-0.4-0.3-0.6-0.4c-2.2-1.2-4.6-2.1-7.1-2.7c-2.5-0.6-5.1-0.9-7.7-0.9c-2.6,0-5.2,0.3-7.7,0.9c-2.5,0.6-4.9,1.5-7.1,2.7c-0.2,0.1-0.4,0.2-0.6,0.4c-2.2,1.2-4.2,2.7-6,4.5c-1.8,1.8-3.3,3.8-4.5,6c-1.2,2.2-2.1,4.6-2.7,7.1c-0.6,2.5-0.9,5.1-0.9,7.7c0,2.6,0.3,5.2,0.9,7.7c0.6,2.5,1.5,4.9,2.7,7.1c1.2,2.2,2.7,4.2,4.5,6c1.8,1.8,3.8,3.3,6,4.5c2.2,1.2,4.6,2.1,7.1,2.7c2.5,0.6,5.1,0.9,7.7,0.9c2.6,0,5.2-0.3,7.7-0.9c2.5-0.6,4.9-1.5,7.1-2.7c2.2-1.2,4.2-2.7,6-4.5c1.8-1.8,3.3-3.8,4.5-6c1.2-2.2,2.1-4.6,2.7-7.1c0.6-2.5,0.9-5.1,0.9-7.7c0-2.6-0.3-5.2-0.9-7.7c-0.6-2.5-1.5-4.9-2.7-7.1C85,57.4,83.5,55.4,81.7,53.6z'/><ellipse fill='white' cx='70' cy='30' rx='8' ry='10'/></svg>`;
-
-        const logos = [];
-        const numLogos = 8;
-        const screenW = window.innerWidth;
-        const screenH = window.innerHeight;
-
-        function random(min, max) {
-            return Math.random() * (max - min) + min;
-        }
-
-        for (let i = 0; i < numLogos; i++) {
-            const div = document.createElement('div');
-            div.className = 'apple-logo';
-            div.innerHTML = appleSVG;
-            document.body.appendChild(div);
-            logos.push({
-                el: div,
-                x: random(0, screenW - 80),
-                y: random(0, screenH - 80),
-                dx: random(-1.5, 1.5),
-                dy: random(-1.5, 1.5)
-            });
-        }
-
-        function animate() {
-            for (const logo of logos) {
-                logo.x += logo.dx;
-                logo.y += logo.dy;
-                if (logo.x < 0 || logo.x > screenW - 80) logo.dx *= -1;
-                if (logo.y < 0 || logo.y > screenH - 80) logo.dy *= -1;
-                logo.el.style.left = logo.x + 'px';
-                logo.el.style.top = logo.y + 'px';
-            }
-            requestAnimationFrame(animate);
-        }
-        animate();
-
-        window.addEventListener('resize', () => {
-            // Optionally handle resize
-        });
-    </script>
+    <div class="center-container">
+        <div class="apple-logo">
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <path fill="white" d="M81.7,53.6c-0.2-0.2-0.4-0.3-0.6-0.4c-2.2-1.2-4.6-2.1-7.1-2.7c-2.5-0.6-5.1-0.9-7.7-0.9c-2.6,0-5.2,0.3-7.7,0.9c-2.5,0.6-4.9,1.5-7.1,2.7c-0.2,0.1-0.4,0.2-0.6,0.4c-2.2,1.2-4.2,2.7-6,4.5c-1.8,1.8-3.3,3.8-4.5,6c-1.2,2.2-2.1,4.6-2.7,7.1c-0.6,2.5-0.9,5.1-0.9,7.7c0,2.6,0.3,5.2,0.9,7.7c0.6,2.5,1.5,4.9,2.7,7.1c1.2,2.2,2.7,4.2,4.5,6c1.8,1.8,3.8,3.3,6,4.5c2.2,1.2,4.6,2.1,7.1,2.7c2.5,0.6,5.1,0.9,7.7,0.9c2.6,0,5.2-0.3,7.7-0.9c2.5-0.6,4.9-1.5,7.1-2.7c2.2-1.2,4.2-2.7,6-4.5c1.8-1.8,3.3-3.8,4.5-6c1.2-2.2,2.1-4.6,2.7-7.1c0.6-2.5,0.9-5.1,0.9-7.7c0-2.6-0.3-5.2-0.9-7.7c-0.6-2.5-1.5-4.9-2.7-7.1C85,57.4,83.5,55.4,81.7,53.6z"/>
+                <ellipse fill="white" cx="70" cy="30" rx="8" ry="10"/>
+            </svg>
+        </div>
+    </div>
 </body>
 </html>
