--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 <body>
     <div class="center-container">
         <div class="apple-logo">
-            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                <path fill="white" d="M81.7,53.6c-0.2-0.2-0.4-0.3-0.6-0.4c-2.2-1.2-4.6-2.1-7.1-2.7c-2.5-0.6-5.1-0.9-7.7-0.9c-2.6,0-5.2,0.3-7.7,0.9c-2.5,0.6-4.9,1.5-7.1,2.7c-0.2,0.1-0.4,0.2-0.6,0.4c-2.2,1.2-4.2,2.7-6,4.5c-1.8,1.8-3.3,3.8-4.5,6c-1.2,2.2-2.1,4.6-2.7,7.1c-0.6,2.5-0.9,5.1-0.9,7.7c0,2.6,0.3,5.2,0.9,7.7c0.6,2.5,1.5,4.9,2.7,7.1c1.2,2.2,2.7,4.2,4.5,6c1.8,1.8,3.8,3.3,6,4.5c2.2,1.2,4.6,2.1,7.1,2.7c2.5,0.6,5.1,0.9,7.7,0.9c2.6,0,5.2-0.3,7.7-0.9c2.5-0.6,4.9-1.5,7.1-2.7c2.2-1.2,4.2-2.7,6-4.5c1.8-1.8,3.3-3.8,4.5-6c1.2-2.2,2.1-4.6,2.7-7.1c0.6-2.5,0.9-5.1,0.9-7.7c0-2.6-0.3-5.2-0.9-7.7c-0.6-2.5-1.5-4.9-2.7-7.1C85,57.4,83.5,55.4,81.7,53.6z"/>
-                <ellipse fill="white" cx="70" cy="30" rx="8" ry="10"/>
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" aria-label="Apple logo">
+                <path fill="white" d="M73.6,52.2c0-13.2,10.7-19.6,11.2-19.9c-6.1-8.9-15.6-10.1-18.9-10.2c-8-0.8-15.6,4.7-19.7,4.7c-4.1,0-10.4-4.6-17.1-4.5c-8.8,0.1-16.9,5.1-21.4,13c-9.1,15.7-2.3,39,6.5,51.8c4.3,6.3,9.4,13.4,16.1,13.1c6.5-0.3,9-4.2,16.9-4.2c7.9,0,10.1,4.2,16.9,4.1c6.9-0.1,11.2-6.4,15.4-12.7c4.9-7.2,6.9-14.2,7-14.6c-0.2-0.1-13.5-5.2-13.7-20.6z"/>
+                <path fill="white" d="M62.2,18.2c3.4-4.1,5.7-9.8,5.1-15.5c-4.9,0.2-10.8,3.3-14.3,7.4c-3.1,3.6-5.8,9.4-4.8,15c5.6,0.4,10.7-2.8,14-7z"/>
             </svg>
         </div>
     </div>
