--- a/index.html
+++ b/index.html
@@ -23,11 +23,18 @@
             width: 200px;
             height: 200px;
             opacity: 0;
-            animation: fadeIn 2s cubic-bezier(.4,0,.2,1) forwards;
+            animation:
+                fadeIn 2s cubic-bezier(.4,0,.2,1) forwards,
+                floatLogo 4s ease-in-out infinite;
             filter:
                 drop-shadow(0 0 32px #fff)
                 drop-shadow(0 0 64px #fff2)
                 drop-shadow(0 0 8px #fff8);
+        }
+        @keyframes floatLogo {
+            0% { transform: translateY(0); }
+            50% { transform: translateY(-24px); }
+            100% { transform: translateY(0); }
         }
         @keyframes fadeIn {
             0% { opacity: 0; }
@@ -38,9 +45,9 @@
 <body>
     <div class="center-container">
         <div class="apple-logo">
-            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" aria-label="Apple logo">
-                <path fill="white" d="M73.6,52.2c0-13.2,10.7-19.6,11.2-19.9c-6.1-8.9-15.6-10.1-18.9-10.2c-8-0.8-15.6,4.7-19.7,4.7c-4.1,0-10.4-4.6-17.1-4.5c-8.8,0.1-16.9,5.1-21.4,13c-9.1,15.7-2.3,39,6.5,51.8c4.3,6.3,9.4,13.4,16.1,13.1c6.5-0.3,9-4.2,16.9-4.2c7.9,0,10.1,4.2,16.9,4.1c6.9-0.1,11.2-6.4,15.4-12.7c4.9-7.2,6.9-14.2,7-14.6c-0.2-0.1-13.5-5.2-13.7-20.6z"/>
-                <path fill="white" d="M62.2,18.2c3.4-4.1,5.7-9.8,5.1-15.5c-4.9,0.2-10.8,3.3-14.3,7.4c-3.1,3.6-5.8,9.4-4.8,15c5.6,0.4,10.7-2.8,14-7z"/>
+            <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg" aria-label="Apple logo">
+                <path fill="white" d="M203.1 132.6c-1.2-24.2 19.9-35.9 20.8-36.4-11.4-16.7-29.1-19-35.4-19.2-15-1.5-29.3 8.7-36.9 8.7-7.6 0-19.6-8.5-32.1-8.3-16.5.2-31.7 9.5-40.1 24.1-17.1 29.1-4.3 72.2 12.2 95.9 8.1 11.7 17.7 25 30.2 24.5 12-0.5 16.5-7.9 30.9-7.9 14.4 0 18.4 7.9 30.9 7.7 12.8-.2 20.7-11.9 28.4-23.6 9-13.2 12.7-26.1 12.8-26.8-.3-.1-24.9-9.6-25.2-38.9z"/>
+                <path fill="white" d="M170.1 44.6c5.7-6.9 9.6-16.5 8.4-26.1-8.1.3-17.9 5.5-23.7 12.3-5.1 5.9-9.6 15.3-7.9 24.5 9.2.7 17.7-4.6 23.2-10.7z"/>
             </svg>
         </div>
     </div>
