--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             width: 100vw;
             height: 100vh;
             overflow: hidden;
-            background: blue;
+            background: gray;
         }
         .center-container {
             position: fixed;
